SEO, Favicon, Footer, Layout, Icona Login

--- a/Ecommerce/index.html
+++ b/Ecommerce/index.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <title>Fake Store</title>
+    <title>Fake Store | Get Now Tech, Jewelry and Clothings</title>
+    <meta
+      name="description"
+      content="Explore Trendy Clothes for women and men, Stunning Jewelry, and Cutting-Edge Tech Gadgets.
+      Elevate Your Style with Convenient Online Shopping"
+    />
   </head>
   <body>
     <nav>
       <div class="wrapper">
-        <div class="logo"><a href="#">Logo</a></div>
+        <a class="logo" href="#"><img src="img/logo.png" alt="Fake Store Logo" /></a>
         <input type="radio" name="slider" id="menu-btn" />
         <input type="radio" name="slider" id="close-btn" />
         <ul class="nav-links">
@@ -29,7 +35,7 @@
             <div class="mega-box">
               <div class="content">
                 <div class="row">
-                  <img src="img/menu.png" alt="" />
+                  <img src="img/menu.png" alt="Fashion Clothings" />
                 </div>
                 <div class="row">
                   <header>Woman</header>
@@ -61,14 +67,24 @@
               </div>
             </div>
           </li>
-          <li><a href="#">Contact us</a></li>
-          <li>
-            <a href="#"><i class="bi bi-bookmark"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="bi bi-cart3"></i></a>
-          </li>
+          <li class="menu-cell"><a href="#"><i class="bi bi-person"></i></a></li>
+              <li class="menu-cell"><a href="#"><i class="bi bi-bookmark "></i></a></li>
+              <li class="menu-cell"><a href="#"><i class="bi bi-cart3"></i></a></li>
         </ul>
+          <span class="section">
+            <ul class="nav-links">
+      <li>
+        <a href="#"><i class=" desktop-item bi bi-person"></i></a>
+        <input type="checkbox" id="showDrop">
+        <ul class="drop-menu">
+          <li><a href="#">Il mio account</a></li>
+          <li><a href="#">Log-in / Sign-in</a></li>
+        </ul>
+      </li>
+              <li><a href="#"><i class="bi bi-bookmark"></i></a></li>
+              <li><a href="#"><i class="bi bi-cart3"></i></a></li>
+            </ul>
+          </span>
         <label for="menu-btn" class="btn menu-btn"
           ><i class="fas fa-bars"></i
         ></label>
@@ -78,76 +94,153 @@
       <h1>NEW COLLECTION</h1>
       <button>SHOP NOW</button>
     </div>
-    <article>
-      <h2>Discover our latest arrivals</h2>
+    <article class="contenuto">
       <div class="container-categorie">
         <a href="#">
-          <div class="categoria-prodotto">
+        <div class="card">
             <div class="container-foto">
-              <img src="img/categoria-donna.jpg" alt="women" />
+            <img src="img/categoria-donna.jpg" alt="women clothes section" />
             </div>
             <h3>WOMAN</h3>
-          </div>
+        </div>
         </a>
         <a href="#">
-          <div class="categoria-prodotto">
+        <div class="card">
             <div class="container-foto">
-              <img src="img/categoria-uomo.jpg" alt="men" />
-            </div>
+            <img src="img/categoria-uomo.jpg" alt="men clothes section" />
+        </div>
             <h3>MAN</h3>
-          </div>
+        </div>
         </a>
         <a href="#">
-          <div class="categoria-prodotto">
+        <div class="card">
             <div class="container-foto">
-              <img src="img/categoria-gioielli.jpg" alt="jewlery" />
+            <img src="img/categoria-gioielli.jpg" alt="jewlery section" />
             </div>
             <h3>JEWELRY</h3>
-          </div>
+        </div>
         </a>
         <a href="#">
-          <div class="categoria-prodotto">
+        <div class="card">
             <div class="container-foto">
-              <img src="img/categoria-tech.jpeg" alt="tech" />
+            <img src="img/categoria-tech.jpg" alt="tech products section" />
             </div>
             <h3>TECH</h3>
-          </div>
+        </div>
         </a>
-      </div>
-      <h2>Products</h2>
-      <div class="container-prodotti"></div>
-
-      <section class="banner">
-        <h4>April Discounts</h4>
-        <h3>Save up to <span>70% Off</span> - All t-shirts & Accessories</h3>
-        <button>Save now</button>
-      </section>
-
-      <section class="container-form">
-        <form method="POST" id="contact-form">
-          <span>CONTACT US</span>
-          <h3>We'd love to hear from you</h3>
-          <input name="name" type="text" placeholder="Your Name" required />
-          <input name="email" type="email" placeholder="Your Email" required />
-          <input name="subject" type="text" placeholder="Subject" required />
-          <textarea
-            name="message"
-            id="message"
-            cols="30"
-            rows="10"
-            placeholder="Your Message"
-            required
-          ></textarea>
-          <div id="conferma" style="display: none">
-            <p></p>
-          </div>
-          <div class="submit-button">
-            <button class="sub-button" type="submit">Send your message</button>
-            <img class="img-form" style="display: none" src="img/Spinner@1x-1.0s-200px-200px.gif" alt="loading" />
-          </div>
-        </form>
-      </section>
+    </div>
+    <div class="container-linea">
+      <div class="linea"></div>
+      <div class="testo"><h2>Discover our latest arrivals</h2></div>
+      <div class="linea"></div>
+    </div>
+    <!-- <select id="filter-options">
+      <option value="all">Tutti</option>
+      <option value="clothing">Abbigliamento</option>
+      <option value="jewelry">Gioielli</option>
+      <option value="tech">Tecnologia</option>
+    </select> -->
+    <div class="container-prodotti"></div>
+    <div class="all-products"><a href="#">View all products</a></div>
     </article>
+    <section class="banner">
+      <h4>April Discounts</h4>
+      <h3>Save up to <span>70% Off</span> - All t-shirts & Accessories</h3>
+      <button>Save now</button>
+    </section>
+
+    <section class="container-form">
+      <form method="POST" id="contact-form">
+        <span>CONTACT US</span>
+        <h3>We'd love to hear from you</h3>
+        <input name="name" type="text" placeholder="Your Name" required />
+        <input name="email" type="email" placeholder="Your Email" required />
+        <input name="subject" type="text" placeholder="Subject" required />
+        <textarea
+          name="message"
+          id="message"
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+          required
+        ></textarea>
+        <div id="conferma" style="display: none">
+          <p></p>
+        </div>
+        <div class="submit-button">
+          <button class="sub-button" type="submit">Send your message</button>
+          <img
+            class="img-form"
+            style="display: none"
+            src="img/Spinner@1x-1.0s-200px-200px.gif"
+            alt="loading"
+          />
+        </div>
+      </form>
+    </section>
+
+    <footer>
+      <div class="contenitore-footer">
+        <div class="sezione-footer" onclick="toggleSection(this)">
+            <div class="drop-down-footer">   
+                <h4>CONTACT INFO</h4>
+                <i class="bi bi-chevron-down"></i>
+            </div>
+            
+            <hr>
+          <ul>
+            <li>Address:</li>
+            <li><span>1234 Street Name, City, England</span></li>
+            <li>Phone:</li>
+            <li><span>(000)000000</span></li>
+            <li>Email:</li>
+            <li><span>email@email.mail</span></li>
+          </ul>
+        </div>
+        <div class="sezione-footer" onclick="toggleSection(this)">
+            <div class="drop-down-footer">   
+                <h4>SHOP</h4>
+                <i class="bi bi-chevron-down"></i>
+            </div>
+            <hr>
+            <ul>
+            <li>New In</li>
+            <li>Woman</li>
+            <li>Man</li>
+            <li>Jewelry</li>
+            <li>Tech</li>
+            <li>Special Offer</li>
+          </ul>
+        </div>
+        <div class="sezione-footer" onclick="toggleSection(this)">
+            <div class="drop-down-footer">   
+                <h4>CUSTOMER SERVICE</h4>
+                <i class="bi bi-chevron-down"></i>
+            </div>
+            <hr>
+          <ul>
+            <li>Advanced Search</li>
+            <li>Orders And Returns</li>
+            <li>Contact Us</li>
+            <li>FAQs</li>
+            <li>Consultant</li>
+            <li>Search Terms</li>
+          </ul>
+        </div>
+      </div>
+      <div class="sezione-secondo-footer">
+        <div class="coyright">
+          <p>© 2024, Fake Fashion. All Rights Reserved.</p>
+        </div>
+        <div class="social">
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-youtube"></i></a>
+            <a href="#"> <i class="bi bi-pinterest"></i></a>
+        </div>
+      </div>
+    </footer>
+    
     <script src="script.js"></script>
   </body>
 </html>
